# met-office-audit

./: .gitignore  README.md  check.ipynb  main.py  met_office_audit.ipynb  pyproject.toml  results.csv
src/met_office_audit/: __init__.py  audit.py  cli.py
src/met_office_check/: __init__.py  aws.py  azure.py  check.py  model.py
tests/: test_audit.py
